external-crates/move/crates/move-compiler/tests/move_2024/matching/invalid_guard_unbound.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04036]: non-exhaustive pattern
   ┌─ tests/move_2024/matching/invalid_guard_unbound.move:13:16
   │
13 │         match (e) {
   │                ^ Pattern 'E::A(_)' not covered
   │
   = Match arms with guards are not considered for coverage.

error[E03009]: unbound variable
   ┌─ tests/move_2024/matching/invalid_guard_unbound.move:14:25
   │
14 │             E::A(x) if (z > 0) => x,
   │                  -      ^
   │                  │      │
   │                  │      Unbound variable 'z'
   │                  │      Did you mean: 'x'
   │                  Similarly named defintion found here
